--- a/restAPI/package.json
+++ b/restAPI/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "rootpath": "^0.1.2",
     "sequelize": "^6.25.7",
