--- a/acts/package.json
+++ b/acts/package.json
@@ -13,11 +13,12 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm start",
+    "build": "npm install",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
